--- a/doc/项目架构.md
+++ b/doc/项目架构.md
@@ -1,5 +1,5 @@
 # Dev-Github-talent-ranking
-# ---zmzzmqa队
+# zmzzmqa队
 
 
 ## 1、项目介绍
@@ -116,15 +116,10 @@ ER图
 
 ![](https://cdn.nlark.com/yuque/0/2024/png/49904385/1730967651263-a1225580-8a72-409d-adc1-768d8fa3a24e.png)
 
-<font style="color:rgb(38, 38, 38);"></font>
-
-<font style="color:rgb(38, 38, 38);"></font>
-
-<font style="color:rgb(38, 38, 38);"></font>
 
 ### 3.4 大语言模模块设计
 #### 预测nation：
-<font style="color:rgb(44, 44, 54);">我们将开发者的相关信息，包括用户名（name）、个人简介（bio）、地理位置（location）、邮箱（email）、公司（company）、所属组织名称（organization_name）、组织地理位置（organizations_location）、粉丝及关注者的位置（location），以及外部博客链接内容（blog_html）整合成一个提示语句，输入至阿里云千问大语言模型中，用于预测输出该开发者的国籍及其对应的概率。我们还设定了一个概率阈值为0.5，当预测的概率低于此阈值时，我们将预测结果标记为 'N/A'。</font>
+我们将开发者的相关信息，包括用户名（name）、个人简介（bio）、地理位置（location）、邮箱（email）、公司（company）、所属组织名称（organization_name）、组织地理位置（organizations_location）、粉丝及关注者的位置（location），以及外部博客链接内容（blog_html）整合成一个提示语句，输入至阿里云千问大语言模型中，用于预测输出该开发者的国籍及其对应的概率。我们还设定了一个概率阈值为0.5，当预测的概率低于此阈值时，我们将预测结果标记为 'N/A'。
 
 预测nation提示词：
 
@@ -183,8 +178,6 @@ user：技术列表:{<font style="color:rgb(38, 38, 38);">feature_topic_list</fo
 ![](https://cdn.nlark.com/yuque/0/2024/png/49904385/1730949211949-229855b2-10e8-471e-918b-5f5001a29a25.png)
 
 
-
-~~~~
 
 ## 4、项目结构
 ```plain
