--- a/doc/项目架构.md
+++ b/doc/项目架构.md
@@ -371,11 +371,11 @@ dev-github-talent-ranking/
 
 
 
-## 5、功能展示（截前端图片）
+## 5、功能展示
 ### 1、首页：综合榜单、热门topic榜单
 我们会对每个用户的计算其综合开发能力分，和各个topic领域下用户的开发能力分。所以会存在一个综合榜单和数百个细分到各个topic领域的榜单。在首页中，我们会展示综合榜单和一些热门topic的榜单。如下所示，第一个图是综合能力榜单，后面的图是按topic来排的榜单。同时在最后我们还会推荐一些topic供用户查询对应的榜单。
 
-
+![](https://cdn.nlark.com/yuque/0/2024/png/49904385/1730995071205-2b308bb4-9840-4dcf-a4a2-ddf83d0e145c.png)
 
 ### 2、某个topic榜单
 除了首页展示的热门的topic榜单，首页中有个搜索框功能，可以搜索具体topic的榜单。用户输入topic的名字，就会跳转到新页面，这个页面展示这个topic的简介和项目数量，然后就是它的榜单，最后下面还会展示关于这个topic的相关topic推荐。这个推荐是基于大量优质项目的带的topic的统计信息，得到一个NxN的矩阵，N代表总topic的数量，这个矩阵表示topic两两的出现的相关性。当用户搜索一个topic榜单后，我们会根据这个推荐矩阵，推荐与用户搜索的topic相关的一些topic。
